fixed version e issue  preventing compilation

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ resume: true
 resume-external: true
 resume-url: https://drive.google.com/file/d/14VxUf9nqY16Ft-m5Inp42VZ-s4OQnQJW/view?usp=sharing
 
-url: http://youngcadam.github.io/
+url: http://youngcadam.github.io
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
