--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # main text of home
 name: Adam Young
 title: Adam Young
-bio: Undergraduate math student @ UCLA
+bio:  UCLA Math Undergraduate
 
 # twitter summary info
 description: A personal website and blog.
@@ -14,7 +14,7 @@ picture: assets/images/profile.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
+# resume-external: false
 resume-url: https://drive.google.com/file/d/14VxUf9nqY16Ft-m5Inp42VZ-s4OQnQJW/view?usp=sharing
 
 url: http://youngcadam.github.io
@@ -56,7 +56,7 @@ email: youngcadam@g.ucla.edu
 authors:
   adam:
     name: Adam Young
-    bio: Undergraduate math student @ UCLA
+    bio: UCLA Math Undergraduate
     external-image: false
     picture: assets/images/profile.jpg
     linkedin: youngcadam
@@ -80,7 +80,7 @@ pagination:
 notes: true
 
 # if you don't need "about" or "blog", comment them out below
-about: true
+# about: true
 blog: true
 
 # do you want to show the "read time" of the posts?
